test/readonly/fail/adhoc06.v3
//@execute 0=0; 1=4
def x = [0];
def main(a: int) -> int {
	if (a == 0) return getType(x);
	var a: array<int>;
	return getType(a);
}
def getType<T>(a: T) -> int {
	if (array<int>.?(a)) return 0;
	if (array<void>.?(a)) return 3;
	return 4;
}
